api_versioned_docs/version-12.0.1/avalonia/platform/gtkwebviewenvironmentrequestedeventargs.mdx
---
title: 'GtkWebViewEnvironmentRequestedEventArgs'
hide_title: true
slug: '/avalonia/platform/gtkwebviewenvironmentrequestedeventargs'
uid: 'Avalonia.Platform.GtkWebViewEnvironmentRequestedEventArgs'
commentId: 'T:Avalonia.Platform.GtkWebViewEnvironmentRequestedEventArgs'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.WebView'
assembly: 'Avalonia.Controls.WebView'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Platform'
tfms:
  - 'net10.0-browser1.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">GtkWebViewEnvironmentRequestedEventArgs Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Platform</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.WebView</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.WebView</code>
</div>
</div>

<div className="apiref-page__signature">

```csharp
public class GtkWebViewEnvironmentRequestedEventArgs
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> EventArgs <span className="apiref-page__relation-separator">-&gt;</span> <a href="../controls/webviewenvironmentrequestedeventargs">WebViewEnvironmentRequestedEventArgs</a> <span className="apiref-page__relation-separator">-&gt;</span> GtkWebViewEnvironmentRequestedEventArgs
</div>
</div>

## Methods

| Name | Description |
| --- | --- |
| [GetDeferral](../controls/webviewenvironmentrequestedeventargs.mdx#uid-a2d519df95) | Inherited from [WebViewEnvironmentRequestedEventArgs](../controls/webviewenvironmentrequestedeventargs.mdx). |

## Properties

| Name | Description |
| --- | --- |
| [ApplicationNameForUserAgent](#uid-7c11a5555e) | No summary available. |
| [BaseCacheDirectory](#uid-3bb77c3ce9) | No summary available. |
| [BaseDataDirectory](#uid-42ff586025) | No summary available. |
| [DisableCache](#uid-ac93700aaf) | No summary available. |
| [EphemeralDataManager](#uid-7f7156b5a8) | No summary available. |
| [ExperimentalOffscreen](#uid-aea4420a4d) | No summary available. |
| [SharedProcessModel](#uid-9ac07ba791) | No summary available. |
| [EnableDevTools](../controls/webviewenvironmentrequestedeventargs.mdx#uid-aeed4f7a28) | Inherited from [WebViewEnvironmentRequestedEventArgs](../controls/webviewenvironmentrequestedeventargs.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-7c11a5555e"></span>

### ApplicationNameForUserAgent Property

```csharp
public string ApplicationNameForUserAgent { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3bb77c3ce9"></span>

### BaseCacheDirectory Property

```csharp
public string BaseCacheDirectory { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-42ff586025"></span>

### BaseDataDirectory Property

```csharp
public string BaseDataDirectory { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ac93700aaf"></span>

### DisableCache Property

```csharp
public bool DisableCache { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-7f7156b5a8"></span>

### EphemeralDataManager Property

```csharp
public bool EphemeralDataManager { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-aea4420a4d"></span>

### ExperimentalOffscreen Property

```csharp
public bool ExperimentalOffscreen { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9ac07ba791"></span>

### SharedProcessModel Property

```csharp
public bool SharedProcessModel { get; set; }
```

</section>

</ApiRefPage>

